<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_f6f7f9">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/ll_top_layout_fragment_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/icon_bg_top_fragment_wallet"
            android:gravity="center_vertical"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23sp"
                android:textColor="@color/white"
                android:layout_marginLeft="25dp"
                android:includeFontPadding="false"
                android:text="@string/hello_welcome_fragment"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23sp"
                android:textColor="@color/white"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:includeFontPadding="false"
                android:text="@string/welcome_to_insight_chain"
                />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_import_wallet_layout"
            android:layout_width="335dp"
            android:layout_height="115dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/icon_bg_import_wallet"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/c_303030"
                    android:textStyle="bold"
                    android:text="@string/import_wallet"
                    android:includeFontPadding="false"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/c_303030"
                    android:text="@string/import_wallet_hint"
                    android:layout_marginLeft="5dp"
                    />

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:includeFontPadding="false"
                android:textSize="15sp"
                android:textColor="@color/c_3574fa"
                android:text="@string/import_an_INB_wallet"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_create_wallet_layout"
            android:layout_width="335dp"
            android:layout_height="115dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/icon_bg_create_wallet"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/c_303030"
                    android:textStyle="bold"
                    android:text="@string/create_wallet"
                    android:includeFontPadding="false"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/c_303030"
                    android:text="@string/create_wallet_hint"
                    android:layout_marginLeft="5dp"
                    />

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:includeFontPadding="false"
                android:textSize="15sp"
                android:textColor="@color/c_3574fa"
                android:text="@string/create_an_INB_wallet"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>