<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="15sp"
        android:textColor="@color/c_303030"
        android:text="@string/identity_name"
        />
    <EditText
        android:id="@+id/et_identity_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@mipmap/icon_bg_et_wallet_password"
        android:textSize="15sp"
        android:textColor="@color/c_303030"
        android:textColorHint="@color/c_666666"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:hint="@string/set_identity_name_hint"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="15sp"
        android:textColor="@color/c_303030"
        android:text="@string/wallet_password"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@mipmap/icon_bg_et_wallet_password">
        <EditText
            android:id="@+id/et_wallet_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:layout_toLeftOf="@id/cb_see_password"
            android:background="@null"
            android:textSize="15sp"
            android:textColor="@color/c_303030"
            android:textColorHint="@color/c_666666"
            android:paddingStart="10dp"
            android:includeFontPadding="false"
            android:lines="1"
            android:inputType="textPassword"
            android:ellipsize="end"
            android:hint="@string/setting_password_hint"/>
        <CheckBox
            android:id="@+id/cb_see_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/et_wallet_password"
            android:layout_alignBottom="@id/et_wallet_password"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="10dp"
            android:paddingRight="10dp"
            android:background="@color/transparent"
            android:button="@drawable/selector_eyes_private_key_import_fragment"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="15sp"
        android:textColor="@color/c_303030"
        android:text="@string/password_tip_message"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@mipmap/icon_bg_et_wallet_password">
        <EditText
            android:id="@+id/et_password_tip"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:layout_toLeftOf="@id/iv_clear"
            android:background="@null"
            android:textSize="15sp"
            android:textColor="@color/c_303030"
            android:textColorHint="@color/c_666666"
            android:paddingStart="10dp"
            android:includeFontPadding="false"
            android:lines="1"
            android:inputType="text"
            android:ellipsize="end"
            android:hint="@string/password_tip_message_hint"/>
        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/et_password_tip"
            android:layout_alignBottom="@id/et_password_tip"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:visibility="gone"
            android:src="@mipmap/icon_clear_et_content"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <CheckBox
            android:id="@+id/cb_agree_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_agree_box_import_wallet"
            android:background="@color/transparent"
            android:checked="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/confirm_hint_private_key_import_fragment"
            android:textSize="12sp"
            android:includeFontPadding="false"
            android:textColor="@color/c_999999"/>
        <TextView
            android:id="@+id/tv_linked_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_hint2_private_key_import_fragment"
            android:textSize="12sp"
            android:includeFontPadding="false"
            android:textColor="@color/c_3574fa"/>

    </LinearLayout>
    <TextView
        android:id="@+id/btn_create_wallet"
        android:layout_width="195dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector_common_button"
        android:enabled="true"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/create_wallet"/>

</LinearLayout>