<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/c_f6f7f9"
    android:id="@+id/root_view_activity_transfer_account">
    <include layout="@layout/layout_topbar_common"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/c_303030"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/receive_account"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@mipmap/icon_bg_et_wallet_password">
        <EditText
            android:id="@+id/et_receive_account"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:layout_toLeftOf="@id/iv_scan_et_receive_account"
            android:background="@null"
            android:textSize="15sp"
            android:textColor="@color/c_303030"
            android:textColorHint="@color/c_999999"
            android:paddingStart="10dp"
            android:includeFontPadding="false"
            android:lines="1"
            android:inputType="text"
            android:ellipsize="end"
            android:hint="@string/enter_receive_account_please"/>
        <ImageView
            android:id="@+id/iv_scan_et_receive_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_scan_et_receive_account"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/iv_paste_et_receive_account"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
        <ImageView
            android:id="@+id/iv_paste_et_receive_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_copy_et_receive_account"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/c_303030"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/amount"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@mipmap/icon_bg_et_wallet_password">
        <EditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:layout_toLeftOf="@id/tv_all_et_amount"
            android:background="@null"
            android:textSize="15sp"
            android:textColor="@color/c_303030"
            android:textColorHint="@color/c_999999"
            android:paddingStart="10dp"
            android:includeFontPadding="false"
            android:lines="1"
            android:inputType="numberDecimal"
            android:ellipsize="end"
            android:hint="@string/enter_transaction_amount_please"/>
        <TextView
            android:id="@+id/tv_all_et_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/c_999999"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:includeFontPadding="false"
            android:text="@string/all"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/c_3574fa"
            android:textSize="13sp"

            android:includeFontPadding="false"
            android:text="@string/can_used_coin_number"/>
        <TextView
            android:id="@+id/tv_can_used_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="@color/c_3574fa"
            android:textSize="13sp"
            android:includeFontPadding="false"
            android:text="9999.00 INB"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/c_303030"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/remarks_information"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@mipmap/icon_bg_et_wallet_password">
        <EditText
            android:id="@+id/et_remarks_information"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:layout_toLeftOf="@id/iv_clear_remarks_information"
            android:background="@null"
            android:textSize="15sp"
            android:textColor="@color/c_303030"
            android:textColorHint="@color/c_999999"
            android:paddingStart="10dp"
            android:includeFontPadding="false"
            android:lines="1"
            android:inputType="text"
            android:ellipsize="end"
            android:hint="@string/enter_remarks_information_please"/>
        <ImageView
            android:id="@+id/iv_clear_remarks_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/et_remarks_information"
            android:layout_alignBottom="@id/et_remarks_information"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            android:src="@mipmap/icon_clear_et_receive_account"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/btn_send_transaction"
        android:layout_width="195dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:enabled="false"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:background="@drawable/selector_common_button"
        />


</LinearLayout>