<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/c_f6f7f9"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_bg_horn"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:includeFontPadding="false"
            android:layout_marginLeft="5dp"
            android:textSize="14sp"
            android:textColor="@color/c_3574fa"
            android:text="@string/hint_backs_up_show_fragment"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/c_303030"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:includeFontPadding="false"
        android:text="@string/wallet_mnemonic_word"/>
    <GridView
        android:id="@+id/gv_fragment_backs_up_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:stretchMode="spacingWidth"
        android:columnWidth="79dp"
        android:verticalSpacing="15dp"
        android:numColumns="4">

    </GridView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/c_303030"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:includeFontPadding="false"
        android:text="@string/wallet_private_key"/>
    <TextView
        android:id="@+id/tv_wallet_private_key"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:paddingRight="10dp"
        android:textSize="14sp"
        android:textColor="@color/c_999999"
        android:background="@mipmap/icon_bg_et_color_f6f7f9_higher"/>
    <TextView
        android:id="@+id/btn_next_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/icon_bg_btn_import_wallet"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/next_step"/>
</LinearLayout>